[package]
name = "RTAP"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
serde_json = "1.0.40"
serde_derive = "1.0"
serde = "1.0.60"
env_logger = "0.7.0"
log = "0.4.0"

lettre = "0.8"
lettre_email = "0.8.0"
native-tls = "0.2.3"