[package]
name = "RTAP"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
serde_json = "1.0.40"
serde_derive = "1.0"
serde = "1.0.60"
fern = "0.5.8"
log = "0.4"
chrono = "0.4"

libc = "0.2.65"

uuid = { version = "0.8", features = ["serde", "v4"] }

mongodb = "0.3.11"

lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2.3"